k3s_cluster/base/dmz/gatus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: dmz
  labels:
    app: dmz-gatus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dmz-gatus
  template:
    metadata:
      labels:
        app: dmz-gatus
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      containers:
        - name: gatus
          image: twinproduction/gatus:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          configMap:
            name: gatus-config
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
