k3s_cluster/base/dmz/gatus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: dmz
  labels:
    app: dmz-gatus
spec:
  type: ClusterIP
  selector:
    app: dmz-gatus
  ports:
    - name: web
      protocol: TCP
      port: 6601
      targetPort: 8080
