k3s_cluster/base/dmz/gatus/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: dmz
  labels:
    app: dmz-gatus
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`gatus.dmz.home`)
      middlewares:
       - name: dmz-middleware-auth-authentik
      services:
        - name: dmz-gatus-service
          port: 6601
  #tls: {}
